{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "5acccced-9fdc-4f23-b7ff-cdcd136f74c0",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "300e3fd8-94ca-457c-8fd2-31fb096c0bed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Q",
                    "type": "Button",
                    "id": "d18b7fa8-893e-473a-bcc7-5b4e83dd13e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "A",
                    "type": "Button",
                    "id": "a9925828-57d4-40a4-8773-7032f1e369ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "956f5765-d60b-45c0-a1a5-8acbb5d45c9b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9767067e-523a-44bf-9936-ed80362e73ce",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Q",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed3fd22b-3b57-4aff-b6a9-f4491bf4de85",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}